--- a/MeanLibs/Views/Home/Form.cshtml
+++ b/MeanLibs/Views/Home/Form.cshtml
@@ -1,26 +1,43 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <title>Make Mean Girls Quotes!</title>
-    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
-  </head>
-  <body>
-    <h1>Fill in the blanks to see quotes from your favorite movie!</h1>
-    <form action="/meanquotes" method="post">
-     <label for="adjective">Adjective</label>
-     <input id="adjective" name="adjective" type="text">
-     <label for="dayOfTheWeek">Day of the Week</label>
-     <input id="dayOfTheWeek" name="dayOfTheWeek" type="text">
-     <label for="color">Color</label>
-     <input id="color" name="color" type="text">
-     <label for="profession">Profession</label>
-     <input id="profession" name="profession" type="text">
-     <label for="slang">Slang word not from your generation</label>
-     <input id="slang" name="slang" type="text">
-     <label for="verb">Verb</label>
-     <input id="verb" name="verb" type="text">
-     <button type="submit">Go!</button>
-    </form>
-  </body>
+<head>
+  <meta charset='utf-8'>
+  <title>Make Mean Girls Quotes!</title>
+  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
+</head>
+<body>
+  <h1>Fill in the blanks to see quotes from your favorite movie!</h1>
+  <form action="/meanquotes" method="post">
+    <br>
+    <label for="adjective">Adjective</label>
+    <input id="adjective" name="adjective" type="text">
+    <br>
+    <label for="dayOfTheWeek">Day of the Week</label>
+    <input id="dayOfTheWeek" name="dayOfTheWeek" type="text">
+    <br>
+    <label for="color">Color</label>
+    <input id="color" name="color" type="text">
+    <br>
+    <label for="profession">Profession</label>
+    <input id="profession" name="profession" type="text">
+    <br>
+    <label for="slang">Slang word not from your generation</label>
+    <input id="slang" name="slang" type="text">
+    <br>
+    <label for="verb">I like to</label>
+    <input id="verb" name="verb" type="text">
+    <label for="verb">(fun activity)</label>
+    <br>
+    <label for="noun">Noun</label>
+    <input id="noun" name="noun" type="text">
+    <br>
+    <label for="holiday">Holiday</label>
+    <input id="holiday" name="holiday" type="text">
+    <br>
+    <label for="clique">High School Clique Stereotype (singular)</label>
+    <input id="clique" name="clique" type="text">
+    <br>
+    <button type="submit">Go!</button>
+  </form>
+</body>
 </html>
